Fixed style issue on mobile view (#60)
Fixed style issues on mobile view

--- a/src/app/layouts/default/assets/styles.less
+++ b/src/app/layouts/default/assets/styles.less
@@ -90,6 +90,10 @@
         div.footer-menu {
             border-right: none !important;
             border-top: 1px solid #fff;
+            text-align: center;
+        }
+        div.footer-about {
+            width: auto;
         }
     }
     .ui.vertical.segment.footer:before {
